# openstack-doctor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.example.yaml
openstack_doctor/: __init__.py  auth.py  cli.py  cluster_readiness.py  models.py  report.py  safety.py
openstack_doctor/checks/: __init__.py  _util.py  cinder.py  flavors.py  glance.py  heat.py  keystone.py  neutron.py  nova.py  octavia.py  quota.py  security_groups.py
openstack_doctor/nodes/: __init__.py  collector.py  ssh.py
tests/: conftest.py  test_cinder_age.py  test_cli_helpers.py  test_inventory.py  test_report_format.py  test_safety_helpers.py  test_safety_wrappers.py  test_ssh_safety.py
