[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openstack-doctor"
version = "0.1.0"
description = "Diagnose stuck OpenStack-backed Kubernetes (kubespray) cluster provisioning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "openstack-doctor" }]
dependencies = [
    "openstacksdk>=3.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "PyYAML>=6.0",
    "paramiko>=3.4.0",
]

[project.scripts]
openstack-doctor = "openstack_doctor.cli:app"
osdoctor = "openstack_doctor.cli:app"

[tool.setuptools.packages.find]
include = ["openstack_doctor*"]
